# superlu_mt

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  make.inc  make.out
.github/workflows/: build.yml
EXAMPLE/: CMakeLists.txt  Makefile  README  c_bridge_pdgssv.c  dgstrs.c  pclinsol.c  pclinsolx.c  pclinsolx1.c  pclinsolx2.c  pcrepeat.c  pcspmd.c  pdlinsol  pdlinsol.c  pdlinsolx  pdlinsolx.c  pdlinsolx1.c  pdlinsolx2.c  pdrepeat  pdrepeat.c  pdspmd  pdspmd.c  pslinsol.c  pslinsolx.c  pslinsolx1.c  pslinsolx2.c  psrepeat.c  psspmd.c  pzlinsol.c  pzlinsolx.c  pzlinsolx1.c  pzlinsolx2.c  pzrepeat.c  pzspmd.c  sp_ienv.c  temp
INSTALL/: Makefile  install.sh
MAKE_INC/: make.alpha  make.cray  make.exemplar  make.pthreads  make.ssg1  make.xc30
SRC/: CMakeLists.txt  Makefile  await.c  cgscon.c  cgsequ.c  cgsrfs.c  cgstrs.c  cholnzcnt.c  clacon.c  clangs.c  claqgs.c  cmatgen.c  cmyblas2.c  colamd.c  colamd.h  cpivotgrowth.c  creadMM.c  creadhb.c  creadmt.c  creadrb.c  csp_blas2.c  csp_blas3.c  dclock.c  dcomplex.c  dgscon.c  dgsequ.c  dgsrfs.c  dgstrs.c  dlacon.c  dlangs.c  dlaqgs.c  dlaran.c  dmatgen.c  dmyblas2.c  dpivotgrowth.c  dreadMM.c  dreadhb.c  dreadmt.c  dreadrb.c  dsp_blas2.c  (+150 more)
TESTING/: CMakeLists.txt  Makefile  pcdrive.c  pcgssv.c  pcgssvx.c  pcgst01.c  pcgst02.c  pcgst04.c  pcgst07.c  pctest.csh  pctest.sh  pddrive.c  pdgssv.c  pdgssvx.c  pdgst01.c  pdgst02.c  pdgst04.c  pdgst07.c  pdtest.csh  pdtest.sh  psdrive.c  psgssv.c  psgssvx.c  psgst01.c  psgst02.c  psgst04.c  psgst07.c  pstest.csh  pstest.sh  pzdrive.c  pzgssv.c  pzgssvx.c  pzgst01.c  pzgst02.c  pzgst04.c  pzgst07.c  pztest.csh  pztest.sh  sp_cconvert.c  sp_dconvert.c  (+3 more)
TESTING/MATGEN/: CMakeLists.txt  f2c.h  slu_mt_Cnames.h
